samples/_failures_safe/1761451618_fd2bbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d99b4847.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_d99b4847.c:142:5: error: expected declaration or statement at end of input
  142 |     for (int i = 0; i < a->rows; i++) {
      |     ^~~
./samples/SAFE/__tmp_d99b4847.c:142:5: error: expected declaration or statement at end of input
